# claude-usage

./: .gitignore  Cargo.toml  README.md
bundle/: Info.plist  autostart.sh  build-app.sh  build-dmg.sh
docs/: oauth-login.md  progress.md
src/: auth.rs  cache.rs  icon.rs  keychain.rs  limits.rs  local.rs  main.rs  model.rs  pricing.rs  tray.rs
