[package]
name = "claude-usage"
version = "0.2.0"
edition = "2021"
description = "Menu-bar индикатор лимитов и расхода Claude для macOS"

[[bin]]
name = "claude-usage"
path = "src/main.rs"

[dependencies]
tray-icon = "0.19"
tao = "0.30"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "native-tls", "gzip", "brotli", "deflate", "zstd"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
sha2 = "0.10"
base64 = "0.22"
security-framework = "3"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
